<resources>
    <string name="app_name">Hintahaukka</string>
    <string name="text_scan_barcode">Skannaa\nviivakoodi</string>
    <string name="text_choose_store">Valitse kauppa</string>
    <string name="text_finding_prices">Haetaan hintoja...</string>
    <string name="button_send">Lähetä</string>
    <string name="text_enter_price">Syötä hinta:</string>
    <string name="text_euro_sign">€</string>
    <string name="text_cents">snt</string>
    <string name="text_finding_name">Haetaan tuotenimi...</string>
    <string name="text_use_test_data">Käytä testitietokantaa</string>
    <string name="snackbar_request_permission_rationale">Sinun on annettava lupa sijainnin käyttöön voidaksemme löytää lähimmät kauppasi.</string>
    <string name="snackbar_require_permission">Anna lupa sijainnin käyttöön puhelimesi asetuksista.</string>
    <string name="button_update_location">Päivitä sijainti</string>
    <string name="text_ask_to_turn_location_on">Sijaintia ei löydy. Onko sijaintisi poissa käytöstä?</string>
    <string name="text_finding_stores">Kauppoja etsitään...</string>
    <string name="text_enter_username">Syötä nimimerkki</string>
    <string name="text_username_taken">Käyttäjätunnus on jo käytössä!</string>
    <string name="text_username_too_short">Käyttäjänimen tulee olla vähintään kaksi merkkiä pitkä</string>
    <string name="text_username_too_long">Käyttäjänimi saa olla korkeintaan 20 merkkiä pitkä</string>
    <string name="key_user_id">key_user_id</string>
    <string name="key_user_name">key_user_name</string>
    <string name="key_points_total">key_points_total</string>
    <string name="key_points_unused">key_points_unused</string>
    <string name="first_time_register_text">Tervetuloa Hintahaukka-sovellukseen! Syötä nimimerkki jatkaaksesi:</string>
    <string name="preference_file_key">hifian_hintahaukka_preference_file_key</string>
    <string name="text_other_prices">Muut hinnat:</string>
    <string name="text_enter_name">Syötä nimi:</string>
    <string name="TuotteenNimenSyottoOhje">Syötä tuotteen nimi</string>
    <string name="send_product_name">Lähetä</string>
    <string name="shopping_cart">Ostoskori</string>
    <string name="scan_product">Skannaa tuote</string>
    <string name="text_faulty_barcode">Virheellinen viivakoodi!</string>
    <string name="text_add">Lisää</string>
    <string name="hint_add_new_shopping_cart">Lisää uusi ostoskori</string>
    <string name="button_add_to_cart">Lisää ostoskoriin</string>
    <string name="message_added_to_cart">Tuote lisätty ostoskoriin!</string>
    <string name="message_product_needs_a_name_to_be_added_to_cart">Lisää tuotteelle nimi voidaksesi lisätä sen ostoskoriin!</string>
    <string name="rank_1">Linnunmuna</string>
    <string name="rank_2">Untuvikko</string>
    <string name="rank_3">Poikanen</string>
    <string name="rank_4">Varpushaukka</string>
    <string name="rank_5">Hiirihaukka</string>
    <string name="rank_6">Kanahaukka</string>
    <string name="rank_7">Jalohaukka</string>
    <string name="rank_8">Hintahaukka</string>
    <string name="button_compare_shopping_cart_prices">Hae parhaat hinnat</string>
    <string name="text_no_shopping_cart_prices_found">Hintatietoja ei saatavilla</string>
    <string name="text_not_enough_points">Pisteet eivät riitä!</string>
    <string name="text_price_is_average">Keskiarvoon perustuva hinta-arvio</string>
    <string name="leaderboard">Ahkerimmat hintahaukat</string>
    <string name="text_position">Sijoitus</string>
    <string name="text_nickname">Nimimerkki</string>
    <string name="text_points">Pisteet</string>
    <string name="store_leaderboard_title">Ahkerimmat hintahaukat kaupassa</string>
    <string name="undo_delete">Kumoa</string>
    <string name="product_deleted_from_shopping_cart">Tuote poistettiin ostoskorista</string>
</resources>
