<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI.LeaderboardFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_leaderboard_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/spacing_sides" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_leaderboard_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/spacing_sides" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_leaderboard_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/spacing_top_and_bottom" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_leaderboard_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/spacing_top_and_bottom" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_leaderboard_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_leaderboard_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_leaderboard_top">

        <TextView
            android:id="@+id/leaderboard_position_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/text_position"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/leaderboard_nickname_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/text_nickname"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/leaderboard_points_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/text_points"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_leaderboard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_leaderboard_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_leaderboard_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_leaderboard_left"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:listitem="@layout/leaderboard_item" />

</androidx.constraintlayout.widget.ConstraintLayout>